--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <div class="filters main-filters">
             <span class="filter-label">Language:</span>
             <button class="filter-btn lang-btn active" data-lang="all">All</button>
-            <button class="filter-btn lang-btn" data-lang="English">English</button>
             <button class="filter-btn lang-btn" data-lang="Chinese">Chinese</button>
+            <button class="filter-btn lang-btn" data-lang="English">English</button>
+
         </div>
 
         <div class="filters sub-filters" id="category-container">
@@ -36,7 +37,7 @@
 
     <footer>
         <div class="container">
-            <p>Maintained by Researcher &copy; 2024</p>
+            <p>Maintained by Xingyu Yang; Research Use Only; Last Updated: 2026-01-07</p>
         </div>
     </footer>
 
